--- a/styles/style.css
+++ b/styles/style.css
@@ -1,34 +1,63 @@
+/* this is dealing with the general layout of every page */
 html {
     margin: 0;
     padding: 0;
     height: 100%;
     width: 100%;
-    /* background-color: #333; */
-    /* color: white; */
+    background-color: #333;
+    color: white;
 }
-
 footer {
     display: flex;
     justify-content: center;
     align-items: center;
-
     height: 50px;
 }
-
 main  {
     margin: 0;
     padding: 0;
-    
+
 }
 
+
+/* this is dealing with images */
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+
+/* this is dealing with the certificates */
+.certImg  { /* this is the big one 800x730 */
+    max-width: 100px;
+    max-height: auto;
+    padding: 15px;
+}
+.certImgSmall  { /* this is the small one 600x600 */
+    max-width: 130px;
+    max-height: auto;
+}
+.certifications {
+    display: flex;
+    border: 2px solid #888;
+    border-radius: 3px;
+    outline: none;
+
+    flex-direction: column;
+    /* flex-wrap: wrap; */
+    justify-content: center;
+    align-items: center;
+}
+.certImg, .certImgSmall {
+    border: 2px solid #888;
+    border-radius: 3px;
+    outline: none;
+}
+
+
+/* this is dealing with the navigation bar */
 .navigation {
-    /* position: fixed; */
-    top: 0;
-    left: 0;
-    right: 0;
     height: 50px;
-    /* background-color: #333; */
-    /* color: white; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -37,10 +66,12 @@ main  {
     font-weight: bold;
     padding: 6;
     height: 20;
-    width: 100%;
-
+    width: 100%; 
+    background-color: blue;
+    border-radius: 30px;
 }
 .navItem {
     text-decoration: none;
-    margin: 5px;
+    padding: 10px;
+    color: wheat;
 }
