--- a/styles/style.css
+++ b/styles/style.css
@@ -12,46 +12,19 @@ footer {
     justify-content: center;
     align-items: center;
     height: 50px;
+    margin: 6px;
+    width: 100%;
+    background-color: blue;
+    border-radius: 30px;
 }
 main  {
     margin: 0;
     padding: 0;
 
 }
-
-
-/* this is dealing with images */
 img {
     max-width: 100%;
     max-height: 100%;
-}
-
-
-/* this is dealing with the certificates */
-.certImg  { /* this is the big one 800x730 */
-    max-width: 100px;
-    max-height: auto;
-    padding: 15px;
-}
-.certImgSmall  { /* this is the small one 600x600 */
-    max-width: 130px;
-    max-height: auto;
-}
-.certifications {
-    display: flex;
-    border: 2px solid #888;
-    border-radius: 3px;
-    outline: none;
-
-    flex-direction: column;
-    /* flex-wrap: wrap; */
-    justify-content: center;
-    align-items: center;
-}
-.certImg, .certImgSmall {
-    border: 2px solid #888;
-    border-radius: 3px;
-    outline: none;
 }
 
 
@@ -66,12 +39,78 @@ img {
     font-weight: bold;
     padding: 6;
     height: 20;
-    width: 100%; 
+    width: 100%;
     background-color: blue;
     border-radius: 30px;
 }
 .navItem {
     text-decoration: none;
     padding: 10px;
+    color: white;
+}
+.navItem:hover {
     color: wheat;
+    cursor: pointer;
+    background-color: rgb(10, 113, 204);
+    border-radius: 10px;
+}
+
+
+/* this is dealing with the certificates */
+.certImg  { /* this is the big one 800x730 */
+    max-width: 100px;
+    max-height: auto;
+    padding: 15px;
+}
+.certImgSmall  { /* this is the small one 600x600 */
+    max-width: 120px;
+    max-height: auto;
+}
+.certifications {
+    display: flex;
+    flex-direction: row;
+    border: 2px solid #888;
+    border-radius: 3px;
+    outline: none;
+    justify-content: center;
+    align-items: center;
+}
+.individualCert {
+    border: 2px solid #888;
+    border-radius: 3px;
+    outline: none;
+    margin: 5px;
+    padding: 5px;
+
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.individualColleges {
+    display: flexbox;
+    flex-direction: column;
+    padding: 5px;
+    margin: 5px;
+    
+    flex-wrap: wrap;
+
+    border: 2px solid #888;
+    border-radius: 3px;
+    outline: none;
+}
+
+
+.individualWork {
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+    margin: 5px;
+    flex-wrap: wrap;
+    border: 2px solid #888;
+    border-radius: 3px;
+    outline: none;
 }
